Bug 775414 InitKeyEvent() should decide input string instead of InitKeyPressEvent() r=smichaud